-Updatare interfata