@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <repositories>
@@ -26,8 +28,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>15</source>
-          <target>15</target>
+          <source>23</source>
+          <target>23</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
@@ -48,12 +51,17 @@
     </dependency>
 
     <!-- Tabula (For extracting tables) -->
+
     <dependency>
       <groupId>technology.tabula</groupId>
       <artifactId>tabula</artifactId>
       <version>1.0.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20250107</version>
+    </dependency>
     <!-- Jackson (For JSON Processing) -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
